starlight [UCSB]: prevent overflow of exhibit description in cards

--- a/starlight/app/assets/stylesheets/application_ucsb.scss
+++ b/starlight/app/assets/stylesheets/application_ucsb.scss
@@ -118,6 +118,17 @@ ul.navbar-nav {
   margin-right: 1em;
 }
 
+.description {
+  .hidden-sm,
+  .hidden-md {
+    display: none;
+  }
+
+  &::after {
+    content: '...';
+  }
+}
+
 ////////////
 // ADMIN
 ////////////
